--- a/project1.html
+++ b/project1.html
@@ -9,5 +9,8 @@
 	<th> Kelas : C</th>
 	<th> Jurusan : Informatika</th>
 	<th> Fakultas : Saintek</th>
+
+	<p>123456789</p>
+	<p>Butuh Libur</p>
 </body>
 </html>>
